--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
 "scripts": {
   "dev": "vite",
-  "build": "npx vite build",
+"build": "npm rebuild && npx vite build",
   "preview": "vite preview"
 },
   "dependencies": {
